src/test/wacc/invalid/syntaxErr/pairs/sndNull.wacc
# call snd on a null pair literal

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int i = snd null;
  println i
end
